# hashkit.net

./: .gitignore  LICENSE  README.md  build.sh  index.html
.github/workflows/: deploy-pages.yml
entropy-calc/: Cargo.toml  build.rs  index.html
entropy-calc/src/: alloc_shim.rs  lib.rs  password_health.rs  zxcvbn_ffi.rs
entropy_calculation/: README.md
entropy_calculation/core/: PassphraseGenerator.cpp  PasswordHealth.cpp
gen-pass-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
gen-pass-ts/src/: browser.ts  index.ts  passwordGenerator.ts  permutations.ts  random.ts  types.ts
gen-pass-ts/src/ui/: app.ts  classPopover.ts  entropy.ts  hashEncode.ts  hashWorker.ts  settings.ts  theme.ts  tooltip.ts
gen-pass-ts/tests/: batchOutput.test.ts  hash.test.ts  passwordGenerator.test.ts  permutations.test.ts
gen-pass-ts/tests/parity/: parity.test.ts  rustParity.ts
gen-pass-ts/tests/parity/fixtures/: generation.json  structural.json
gen-pass-ts/tools/parity-ref/: Cargo.toml
gen-pass-ts/tools/parity-ref/src/: lib.rs  password_generator.rs  random.rs  test_rng.rs
pass-hash/: Cargo.toml
pass-hash/src/: lib.rs  md5_crypt.rs  options.rs  response.rs  salt.rs
pass-hash/src/detect/: mod.rs  phc.rs  prefixes.rs
pass-hash/src/encode/: argon2.rs  bcrypt.rs  django.rs  htpasswd.rs  mod.rs  pbkdf2_phc.rs  scrypt.rs  shadow.rs
pass-hash/tests/vectors/: README.json
