[package]
name = "pass-hash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["argon2", "bcrypt", "scrypt", "shadow", "django", "htpasswd", "pbkdf2"]

argon2 = ["dep:argon2"]
bcrypt = ["dep:bcrypt"]
scrypt = ["dep:scrypt"]
shadow = ["dep:sha-crypt", "dep:yescrypt"]
django = ["dep:pbkdf2", "dep:sha2", "dep:hmac"]
htpasswd = ["dep:md5", "bcrypt"]
pbkdf2 = ["dep:pbkdf2", "dep:sha2"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }
base64 = "0.22"
argon2 = { version = "0.5", optional = true, features = ["password-hash"] }
password-hash = "0.5"
bcrypt = { version = "0.17", optional = true }
scrypt = { version = "0.11", optional = true, features = ["simple"] }
sha-crypt = { version = "0.5", optional = true }
yescrypt = { version = "0.1.0", optional = true, features = ["password-hash"] }
pbkdf2 = { version = "0.12", optional = true, features = ["simple"] }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
md5 = { version = "0.7", optional = true }
